Fixed padding issue on game face.

--- a/assets/css/pages/points.styl
+++ b/assets/css/pages/points.styl
@@ -168,6 +168,8 @@
 .points-guessTheScore-pick
 .points-guessTheScore-picked
 .points-gameFace-gameDay
+   .ui-content
+      padding: 0 0 inherit 0
    .team-info
       width: 304px
       margin: 4px auto 0
@@ -225,7 +227,7 @@
       background-size: 370.5px 184px
       width: 184px
       height: 184px
-      margin 0 auto 28px
+      margin 15px auto 28px
       background-position: 0 0
       &.on
          background-position: -186px -185px
