--- a/views/leaderboard/leaderboard.jade
+++ b/views/leaderboard/leaderboard.jade
@@ -6,31 +6,60 @@ block header
 block content
    .ui-bar-a.switcher
       fieldset(data-role="controlgroup", data-type="horizontal", data-mini="true")
-         input(type="radio", name="board-picker", id="board-overall-picker", value="overall", checked="true")
+         input(type="radio", name="board-picker", id="board-overall-picker", value="overall", checked="true", data-bind="checked: selected_view")
          label(for="board-overall-picker") Overall
-         input(type="radio", name="board-picker", id="board-roster-picker", value="roster")
+         input(type="radio", name="board-picker", id="board-roster-picker", value="roster", data-bind="checked: selected_view")
          label(for="board-roster-picker") Roster
-   .scrollable-content
-      ul.pattern-bg(data-role="listview").fans
-         each fan, index in fans
-            li.fan(data-icon="false")
-               a(href="#{fan.profile_url}") 
-                  .image-wrap
-                     img(src="#{fan.profile_image}", alt="#{fan.name}")
-                     .cover
-                  .fan-info
-                     .name= fan.name
-                     .team= fan.team
-                  .data-wrap
-                     span.data
-                        span.label Roster:
-                        span.value= fan.data.roster
-                     span.data
-                        span.label Points:
-                        span.value= fan.data.points
-                     span.data
-                        span.label Rank:
-                        span.value= fan.data.rank
-                  .rank= index + 1
 
-            
+   script(type="text/javascript")
+      if (!window.fannect.content) window.fannect.content = {}
+      window.fannect.leaderboard = {
+         overall_fans: !{JSON.stringify(overall_fans)},
+         roster_fans: !{JSON.stringify(roster_fans)}
+      };
+
+   .scrollable-content
+      ul.fans.pattern-bg(data-role="listview", data-bind="template: { name:'leaderboard-fan-template', foreach: overall_fans }, listviewUpdate: overall_fans, visible: is_overall_selected")
+      ul.fans.pattern-bg(data-role="listview", data-bind="template: { name:'leaderboard-fan-template', foreach: roster_fans }, listviewUpdate: roster_fans, visible: !is_overall_selected()")
+      //- ul.pattern-bg(data-role="listview").fans
+      //-    each fan, index in fans
+      //-       li.fan(data-icon="false")
+      //-          a(href="#{fan.profile_url}") 
+      //-             .image-wrap
+      //-                img(src="#{fan.profile_image}", alt="#{fan.name}")
+      //-                .cover
+      //-             .fan-info
+      //-                .name= fan.name
+      //-                .team= fan.team
+      //-             .data-wrap
+      //-                span.data
+      //-                   span.label Roster:
+      //-                   span.value= fan.data.roster
+      //-                span.data
+      //-                   span.label Points:
+      //-                   span.value= fan.data.points
+      //-                span.data
+      //-                   span.label Rank:
+      //-                   span.value= fan.data.rank
+      //-             .rank= index + 1
+
+   script(id="leaderboard-fan-template", type="text/html")
+      li.fan(data-icon="false")
+         a(data-bind="attr: { 'href': profile_url }")
+            .image-wrap
+               img(data-bind="attr: { 'src': profile_image_url }")
+               .cover
+            .fan-info
+               .name(data-bind="text: name")
+               .team(data-bind="text: team")
+            .data-wrap
+               span.data
+                  span.label Roster:
+                  span.value(data-bind="text: roster")
+               span.data
+                  span.label Points:
+                  span.value(data-bind="text: points")
+               span.data
+                  span.label Rank:
+                  span.value(data-bind="text: rank")
+            .rank 0
