--- a/assets/css/pages/connect.styl
+++ b/assets/css/pages/connect.styl
@@ -1,7 +1,11 @@
 .connect-connect
-   background: url(/images/Pattern_FabricKnit@2x.png)
+   background: url(/images/Pattern_FabricKnit.png)
    background-size: 4px 4px
    .ui-content
       padding: 0
    .fans
       margin: 0
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5)
+   .connect-connect
+      background-image: url(/images/Pattern_FabricKnit@2x.png)
