--- a/views/points/attendanceStreak.jade
+++ b/views/points/attendanceStreak.jade
@@ -6,6 +6,13 @@ block header
 
 block content
    
+   script(type="text/javascript")
+      window.fannect.attendance_streak = {
+         checked_in: !{JSON.stringify(checked_in)},
+         no_game: !{JSON.stringify(no_game)},
+         next_game: !{JSON.stringify(next_game)}
+      };
+
    .info
       .left-cap
       .right-cap
@@ -27,6 +34,11 @@ block content
 
    .bottom
       .inner
-         a.check-in(data-role="button") Check In
-
+         a.check-in(data-role="button", data-bind="visible: !checked_in() && !no_game, click: checkIn") Check In
+         .checked-in(data-bind="fadeIn: checked_in() && !no_game, duration: 500", style="display:none;") Checked In!
+         .no-game(data-bind="visible: no_game")
+            .scrolling-text Check ins are only allowed on game days!
+            .next-game
+               span.label Next Gameday:
+               span.text(data-bind="text: next_game")
 
