Added scrolling support for mobile browsers that do not support overflow: auto;

--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -41,6 +41,10 @@
 .ui-page
    background: url(/images/Tilable-Background.png) 50% 0
    background-size: 50px 50px
+   overflow: hidden
+
+.ui-content
+   overflow: hidden
 
 .background-highlight
    position: absolute
@@ -236,3 +240,5 @@
 @import "pages/leaderboard"
 @import "pages/connect"
 @import "pages/preferences"
+
+@import "lib/fixes"
