--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -132,10 +132,12 @@
       background: url(/images/Pattern_FabricKnit.png)
       background-size: 4px 4px
       position: relative
-      dropshadow: inset 0 10px 15px rgba(255,255,255, .4), inset 0 -10px 15px rgba(200,200,200,.4)
+      .ui-btn-inner
+         background-highlight()
       &.ui-btn-active
          border-color: #CCC
-         dropshadow: inset 0 75px 85px rgba(150,150,150, .4), inset 0 10px 20px rgba(100,100,100, .5), inset 0 -10px 15px rgba(200,200,200,.4)
+         .ui-btn-inner
+            background-lowlight()
 
 .fans
    .fan
