Added in scrolling to change teams.

--- a/assets/css/pages/leaderboard.styl
+++ b/assets/css/pages/leaderboard.styl
@@ -35,4 +35,4 @@
    .leaderboard-leaderboard
       background-image: url(/images/Pattern_FabricKnit@2x.png)
    .fans .fan .rank
-      background: url(/images/leaderboard/Overlay_LeaderboardRank@2x.png)
+      background-image: url(/images/leaderboard/Overlay_LeaderboardRank@2x.png)
