--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -235,7 +235,7 @@
       background-image: url(/images/Pattern_FabricKnit@2x.png)
 
    .icon.gamecell
-      background: url(/images/icons/icons-gamecell@2x.png)
+      background-image: url(/images/icons/icons-gamecell@2x.png)
 
 @import "pages/profile"
 @import "pages/points"
