Profile page with full page scroll.

--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -15,7 +15,8 @@
    height: 1px
 
 .header
-   position: relative
+   position: fixed
+   width: 100%
    dropshadow: 0 2px 3px rgba(0,0,0,.5)
    z-index: 500
    .ui-btn-left
@@ -45,6 +46,8 @@
 
 .ui-content
    overflow: hidden
+   -webkit-overflow-scrolling: touch
+   padding-top: 52px!important
 
 .background-highlight
    position: absolute
