Very minor CSS optimization.

--- a/assets/css/pages/leaderboard.styl
+++ b/assets/css/pages/leaderboard.styl
@@ -16,23 +16,22 @@
       margin-bottom: 5px
    .fans
       margin: 0
-      .fan
-         .rank
-            position: absolute
-            right: 8px
-            top: 26px 
-            background: url(/images/leaderboard/Overlay_LeaderboardRank.png)
-            background-size: 27px 28px
-            width: 27px
-            height: 28px
-            font-family: JerseyM54, Helvetica, Arial, sans-serif
-            text-align: center
-            font-size: 1.2em
-            line-height: 28px
-            color: color-dark-red
+      .rank
+         position: absolute
+         right: 8px
+         top: 26px 
+         background: url(/images/leaderboard/Overlay_LeaderboardRank.png)
+         background-size: 27px 28px
+         width: 27px
+         height: 28px
+         font-family: JerseyM54, Helvetica, Arial, sans-serif
+         text-align: center
+         font-size: 1.2em
+         line-height: 28px
+         color: color-dark-red
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    .leaderboard-leaderboard
       background-image: url(/images/Pattern_FabricKnit@2x.png)
-   .fans .fan .rank
+   .fans .rank
       background-image: url(/images/leaderboard/Overlay_LeaderboardRank@2x.png)
