Modified profile to be PhoneGap compliant.

--- a/assets/css/pages/leaderboard.styl
+++ b/assets/css/pages/leaderboard.styl
@@ -2,7 +2,7 @@
 @import "../lib/mixins"
 
 .leaderboard-leaderboard
-   background: url(/images/Pattern_FabricKnit.png)
+   background: url(../images/Pattern_FabricKnit.png)
    background-size: 4px 4px
    .ui-content
       padding: 0
@@ -20,7 +20,7 @@
          position: absolute
          right: 8px
          top: 26px 
-         background: url(/images/leaderboard/Overlay_LeaderboardRank.png)
+         background: url(../images/leaderboard/Overlay_LeaderboardRank.png)
          background-size: 27px 28px
          width: 27px
          height: 28px
@@ -32,6 +32,6 @@
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    .leaderboard-leaderboard
-      background-image: url(/images/Pattern_FabricKnit@2x.png)
+      background-image: url(../images/Pattern_FabricKnit@2x.png)
    .fans .rank
-      background-image: url(/images/leaderboard/Overlay_LeaderboardRank@2x.png)
+      background-image: url(../images/leaderboard/Overlay_LeaderboardRank@2x.png)
