--- a/assets/css/pages/points.styl
+++ b/assets/css/pages/points.styl
@@ -2,7 +2,7 @@
 @import "../lib/variables"
 
 .points-points
-   background: url(/images/Pattern_FabricKnit.png)
+   background: url(../images/Pattern_FabricKnit.png)
    background-size: 4px 4px
    .ui-content
       padding-left: 8px
@@ -33,7 +33,7 @@
          margin: 0 auto
          max-width: 600px
          height: 121px
-         background: url(/images/games/attendanceStreak/Overlay_Marquee_iPhone.png) repeat-x 50% -1px
+         background: url(../images/games/attendanceStreak/Overlay_Marquee_iPhone.png) repeat-x 50% -1px
          background-size: 320px 121px
          position: relative
          overflow: hidden
@@ -46,11 +46,11 @@
             height: 110px
          .left-cap
             left: 0
-            background: url(/images/games/attendanceStreak/Overlay_MarqueeCap_Left_iPhone.png)
+            background: url(../images/games/attendanceStreak/Overlay_MarqueeCap_Left_iPhone.png)
             background-size: 13px 110px
          .right-cap
             right: 0
-            background: url(/images/games/attendanceStreak/Overlay_MarqueeCap_Right_iPhone.png)
+            background: url(../images/games/attendanceStreak/Overlay_MarqueeCap_Right_iPhone.png)
             background-size: 13px 110px
          .stadium-info
             padding-top: 8px
@@ -83,7 +83,7 @@
                float: left
                width: 20% 
                height: 36px
-               background: url(/images/games/Overlay_VsButton.png) no-repeat 50% 0%
+               background: url(../images/games/Overlay_VsButton.png) no-repeat 50% 0%
                background-size: 36px 36px
             .away-info
                float: left
@@ -96,7 +96,7 @@
          width: 100%
          height: 96px
          bottom: footer-height
-         background: url(/images/games/attendanceStreak/Overlay_ButtonHolder_iPhone.png) 50% 0%
+         background: url(../images/games/attendanceStreak/Overlay_ButtonHolder_iPhone.png) 50% 0%
          background-size: 320px 96px
          .inner
             max-width: 280px
@@ -104,7 +104,7 @@
             margin: 32px auto
             text-align: center
          .checked-in
-            background: url(/images/games/attendanceStreak/Overlay_checkbox.png) 0% 50% no-repeat
+            background: url(../images/games/attendanceStreak/Overlay_checkbox.png) 0% 50% no-repeat
             background-size: 39px 39px
             display: inline-block
             height: 39px
@@ -131,7 +131,7 @@
          label
             color: color-light-gray
          .guess-wrap
-            background: url(/images/games/guessTheScore/Overlay_PickSetBox.png) 0 50% no-repeat
+            background: url(../images/games/guessTheScore/Overlay_PickSetBox.png) 0 50% no-repeat
             background-size: 129px 107px
             position: relative
             width: 129px
@@ -167,7 +167,7 @@
    .picked
       display: none
       .game-preview
-         background: url(/images/games/guessTheScore/Overlay_SubtleShadow.png) 50% -24px no-repeat
+         background: url(../images/games/guessTheScore/Overlay_SubtleShadow.png) 50% -24px no-repeat
          background-size: 290px 60px
          width: 290px
          min-height: 36px
@@ -193,7 +193,7 @@
          width: 36px 
          height: 36px
          margin-top: 2px
-         background: url(/images/games/Overlay_VsButton.png) no-repeat 50% 0%
+         background: url(../images/games/Overlay_VsButton.png) no-repeat 50% 0%
          background-size: 36px 36px
 
 .points-guessTheScore-picked
@@ -211,7 +211,7 @@
             font-family: JerseyM54, Helvetica, Arial, sans-serif
             font-size: 5.0em
             margin: 8px 0 0 0
-            background: url(/images/games/guessTheScore/Overlay_PickSetBox.png)
+            background: url(../images/games/guessTheScore/Overlay_PickSetBox.png)
             background-size: 129px 107px
             width: 129px
             height: 107px
@@ -222,7 +222,7 @@
             margin-left: 21px
 
    .game-preview
-      background: url(/images/games/guessTheScore/Overlay_SubtleShadow.png) 50% -24px no-repeat
+      background: url(../images/games/guessTheScore/Overlay_SubtleShadow.png) 50% -24px no-repeat
       background-size: 290px 60px
       width: 290px
       min-height: 36px
@@ -236,7 +236,7 @@
 .points-gameFace-noGame
 .points-gameFace-gameDay
    .game-face
-      background: url(/images/games/gameFace/Gameface_Sprite.png)
+      background: url(../images/games/gameFace/Gameface_Sprite.png)
       background-size: 370.5px 184px
       width: 184px
       height: 184px
@@ -264,39 +264,39 @@
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    .points-points
-      background-image: url(/images/Pattern_FabricKnit@2x.png)
+      background-image: url(../images/Pattern_FabricKnit@2x.png)
    .points-attendanceStreak .info
-      background-image: url(/images/games/attendanceStreak/Overlay_Marquee_iPhone@2x.png)
+      background-image: url(../images/games/attendanceStreak/Overlay_Marquee_iPhone@2x.png)
       .left-cap
-         background-image: url(/images/games/attendanceStreak/Overlay_MarqueeCap_Left_iPhone@2x.png)
+         background-image: url(../images/games/attendanceStreak/Overlay_MarqueeCap_Left_iPhone@2x.png)
       .right-cap
-         background-image: url(/images/games/attendanceStreak/Overlay_MarqueeCap_Right_iPhone@2x.png)
+         background-image: url(../images/games/attendanceStreak/Overlay_MarqueeCap_Right_iPhone@2x.png)
 
    .points-attendanceStreak .bottom
-      background-image: url(/images/games/attendanceStreak/Overlay_ButtonHolder_iPhone@2x.png)
+      background-image: url(../images/games/attendanceStreak/Overlay_ButtonHolder_iPhone@2x.png)
       .checked-in
-         background-image: url(/images/games/attendanceStreak/Overlay_checkbox@2x.png)
+         background-image: url(../images/games/attendanceStreak/Overlay_checkbox@2x.png)
 
    .points-guessTheScore-pick
       .guess-wrap
-         background-image: url(/images/games/guessTheScore/Overlay_PickSetBox@2x.png)
+         background-image: url(../images/games/guessTheScore/Overlay_PickSetBox@2x.png)
       .game-preview
-         background-image: url(/images/games/guessTheScore/Overlay_SubtleShadow@2x.png)
+         background-image: url(../images/games/guessTheScore/Overlay_SubtleShadow@2x.png)
 
    .points-attendanceStreak
    .points-guessTheScore-pick
    .points-guessTheScore-picked
    .points-gameFace-gameDay
          .vs
-            background-image: url(/images/games/Overlay_VsButton@2x.png)
+            background-image: url(../images/games/Overlay_VsButton@2x.png)
 
    .points-guessTheScore-picked
       .score
-         background-image: url(/images/games/guessTheScore/Overlay_PickSetBox@2x.png)
+         background-image: url(../images/games/guessTheScore/Overlay_PickSetBox@2x.png)
       .game-preview
-         background-image: url(/images/games/guessTheScore/Overlay_SubtleShadow@2x.png)
+         background-image: url(../images/games/guessTheScore/Overlay_SubtleShadow@2x.png)
 
    .points-gameFace-noGame
    .points-gameFace-gameDay
       .game-face
-         background-image: url(/images/games/gameFace/Gameface_Sprite@2x.png) 
+         background-image: url(../images/games/gameFace/Gameface_Sprite@2x.png) 
