--- a/assets/css/pages/profile.styl
+++ b/assets/css/pages/profile.styl
@@ -1,7 +1,7 @@
 @import "../lib/mixins"
 @import "../lib/variables"
 
-.profile-profile
+.profile
    .ui-content
       padding: 0 0 inherit 0
    .profile-images
@@ -22,7 +22,7 @@
             z-index: 200
             width: 210px
             height: 210px
-            background: url(/images/profile/Overlay_TeamPictureFrame.png) 
+            background: url(../images/profile/Overlay_TeamPictureFrame.png) 
             background-size:162px 162px
          img
             width: 210px
@@ -40,7 +40,7 @@
             z-index: 400
             width: 162px
             height: 162px
-            background: url(/images/profile/Overlay_ProfilePictureFrame.png) 
+            background: url(../images/profile/Overlay_ProfilePictureFrame.png) 
             background-size:162px 162px
          img
             position: absolute
@@ -58,7 +58,7 @@
       width: 302px 
       height: 66px
       margin: 8px auto
-      background: url(/images/profile/Profile_GlassMarquee.png) 
+      background: url(../images/profile/Profile_GlassMarquee.png) 
       background-size:302px 66px
       text-transform: uppercase
       .view-port
@@ -94,7 +94,7 @@
             top: 17px
             width: 13px
             height: 15px
-            background: url(/images/profile/Profile_TeamArrows.png) no-repeat
+            background: url(../images/profile/Profile_TeamArrows.png) no-repeat
             background-size: 31px 15px 
          &.next
             right: 8px
@@ -111,7 +111,7 @@
       width: 302px
       height: 36px
       margin: 8px auto
-      background: url(/images/profile/Profile_ScoreDisplay-iPhone.png) 
+      background: url(../images/profile/Profile_ScoreDisplay-iPhone.png) 
       background-size:302px 36px
       .score
          position: absolute
@@ -133,7 +133,7 @@
    .separator
       width: 320px
       height: 32px
-      background: url(/images/profile/ProfileSeperators.png) no-repeat
+      background: url(../images/profile/ProfileSeperators.png) no-repeat
       background-size: 965px 26px
       margin: 20px auto 5px auto
    .text
@@ -154,12 +154,12 @@
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    .profile-images 
       .team-wrap .cover
-         background-image: url(/images/profile/Overlay_TeamPictureFrame@2x.png)
+         background-image: url(../images/profile/Overlay_TeamPictureFrame@2x.png)
       .user-wrap .cover
-          background-image: url(/images/profile/Overlay_ProfilePictureFrame@2x.png) 
+          background-image: url(../images/profile/Overlay_ProfilePictureFrame@2x.png) 
       .team-name-wrap
-         background-image: url(/images/profile/Profile_GlassMarquee@2x.png) 
+         background-image: url(../images/profile/Profile_GlassMarquee@2x.png) 
       .score-wrap
-         background-image: url(/images/profile/Profile_ScoreDisplay-iPhone@2x.png) 
+         background-image: url(../images/profile/Profile_ScoreDisplay-iPhone@2x.png) 
       .separator
-         background-image: url(/images/profile/ProfileSeperators@2x.png)
+         background-image: url(../images/profile/ProfileSeperators@2x.png)
