--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -4,7 +4,7 @@
 // Layout
 
 // .ui-page
-//    background: url(/images/Background_PerforatedMetal@2x.png)
+//    background: url(../images/Background_PerforatedMetal@2x.png)
 
 @font-face
    font-family: JerseyM54
@@ -39,7 +39,7 @@
    -webkit-overflow-scrolling: touch
 
 .ui-page
-   background: url(/images/Tilable-Background.png) 50% 0
+   background: url(../images/Tilable-Background.png) 50% 0
    background-size: 50px 50px
    overflow: hidden
 
@@ -51,7 +51,7 @@
    top: 0
    width: 100%
    height: 100%
-   background: url(/images/Lighting-Background.png) 50% 0 no-repeat
+   background: url(../images/Lighting-Background.png) 50% 0 no-repeat
    background-size: 320px 480px
 
 .footer
@@ -67,7 +67,7 @@
    .ui-icon.ui-icon-custom
       width: 48px
       height: 32px
-      background: url(/images/icons/icons-tab.png) no-repeat
+      background: url(../images/icons/icons-tab.png) no-repeat
       background-size: 260px 32px
       margin-left: -24px
    .profile-menu .ui-icon
@@ -84,7 +84,7 @@
 // Elements
 .team-glass
    font-size: .7em
-   background: url(/images/games/Overlay_TeamGlass_iPhone.png)
+   background: url(../images/games/Overlay_TeamGlass_iPhone.png)
    background-size: 134px 43px
    width: 110px
    height: 25px
@@ -101,7 +101,7 @@
    width: 280px
    height: 24px
    margin: 4px auto
-   background: url(/images/Overlay_ScrollBarBase.png) repeat-x 0% 50%
+   background: url(../images/Overlay_ScrollBarBase.png) repeat-x 0% 50%
    background-size: 2px 20px
    .text-wrap
       position: absolute
@@ -121,7 +121,7 @@
       left: -5px
       width: 290px
       height: 24px
-      background: url(/images/Overlay_ScrollBarFrame_iPhone.png)
+      background: url(../images/Overlay_ScrollBarFrame_iPhone.png)
       background-size: 290px 24px
       dropshadow: 0 2px 4px rgba(0,0,0,0.8)
       border-radius: 5px
@@ -129,7 +129,7 @@
 
 .pattern-bg 
    li.ui-li
-      background: url(/images/Pattern_FabricKnit.png)
+      background: url(../images/Pattern_FabricKnit.png)
       background-size: 4px 4px
       position: relative
       .ui-btn-inner
@@ -183,7 +183,7 @@
    &.settings
       width: 29px
       height: 29px
-      background: url(/images/icons/icons-settings.png) no-repeat;
+      background: url(../images/icons/icons-settings.png) no-repeat;
       background-size: 301px 29px
 
       &.full-tilt-ventures
@@ -208,7 +208,7 @@
    &.gamecell
       width: 72px
       height: 72px
-      background: url(/images/icons/icons-gamecell.png) no-repeat
+      background: url(../images/icons/icons-gamecell.png) no-repeat
       background-size: 226px 72px
             
       &.attendence-streak
@@ -220,22 +220,22 @@
       
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    .ui-page
-      background-image: url(/images/Tilable-Background@2x.png)
+      background-image: url(../images/Tilable-Background@2x.png)
    .background-highlight
-      background-image: url(/images/Lighting-Background@2x.png)
+      background-image: url(../images/Lighting-Background@2x.png)
    .team-glass
-      background-image: url(/images/games/Overlay_TeamGlass_iPhone@2x.png)
+      background-image: url(../images/games/Overlay_TeamGlass_iPhone@2x.png)
    .footer .ui-icon.ui-icon-custom
-      background-image: url(/images/icons/icons-tab@2x.png)
+      background-image: url(../images/icons/icons-tab@2x.png)
    .scrolling-text
-      background-image: url(/images/Overlay_ScrollBarBase@2x.png)
+      background-image: url(../images/Overlay_ScrollBarBase@2x.png)
       .cover
-         background-image: url(/images/Overlay_ScrollBarFrame_iPhone@2x.png)
+         background-image: url(../images/Overlay_ScrollBarFrame_iPhone@2x.png)
    .pattern-bg li.ui-li
-      background-image: url(/images/Pattern_FabricKnit@2x.png)
+      background-image: url(../images/Pattern_FabricKnit@2x.png)
 
    .icon.gamecell
-      background-image: url(/images/icons/icons-gamecell@2x.png)
+      background-image: url(../images/icons/icons-gamecell@2x.png)
 
 @import "pages/profile"
 @import "pages/points"
