--- a/assets/css/pages/connect.styl
+++ b/assets/css/pages/connect.styl
@@ -1,5 +1,5 @@
 .connect-connect
-   background: url(/images/Pattern_FabricKnit.png)
+   background: url(../images/Pattern_FabricKnit.png)
    background-size: 4px 4px
    .ui-content
       padding: 0
@@ -8,4 +8,4 @@
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
    .connect-connect
-      background-image: url(/images/Pattern_FabricKnit@2x.png)
+      background-image: url(../images/Pattern_FabricKnit@2x.png)
